# app/Http/Controllers/UserController.php
@@ -6,8 +6,7 @@ use App\Models\User;
 use App\Http\Requests\UserRequest;
 use EasyWeChatComposer\EasyWeChat;
 use Illuminate\Support\Facades\Cache;
-use L5Swagger\Http\Controllers\SwaggerAssetController;
-use L5Swagger\Http\Controllers\SwaggerController;
+
 use OpenApi\Annotations as OA;
 
 /**
@@ -17,18 +16,16 @@ class UserController extends Controller
 {
     /**
      * @OA\Put(path="/api/user", summary="修改用户资料",
-     *     @OA\Parameter(name="Accept",in="header",content="application/json"),
-     *     @OA\Response(response="200", description=""),
-     *     @OA\RequestBody(
-     *
-     *          @OA\MediaType(mediaType="application/json",
+     *     @OA\Response(response="200", description="{code:0}"),
+     *     @OA\RequestBody(@OA\MediaType(mediaType="application/json",
      *             @OA\Schema(
-     *                 @OA\Property(property="id",type="int"),
-     *                 @OA\Property(property="name",type="string"),
-     *                 example={"id": 10, "name": "Jessica Smith"}
+     *                 @OA\Property(property="nickname",type="string"),
+     *                 @OA\Property(property="phone",type="string"),
+     *                 example={"nickname": "Jessica Smith", "phone": "13012341234"}
      *             ))
      *      )
      * )
+     * @param UserRequest $request
      * @return \Illuminate\Http\JsonResponse
      */
     public function update(UserRequest $request)
@@ -39,12 +36,10 @@ class UserController extends Controller
 
     /**
      * @OA\Get(path="/api/user", summary="查询用户资料",
-     * @OA\Parameter(name="id",in="path",@OA\Schema(type="int")),
      * @OA\Response(response="200", description="success"))
-     * @param int $id
      * @return \Illuminate\Http\JsonResponse
      */
-    public function show(int $id)
+    public function show()
     {
         return $this->setData();
     }
